manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-sampleapp1-82240947
spec:
  ports:
    - port: 8080
  selector:
    app: "sampleapp1-82240947"
